# mt5-api

./: .gitignore  MT5-Api.postman_collection.json  README.md  pyproject.toml  pytest.ini
mt5_api/: main.py  models.py  settings.py
mt5_api/models/: __init__.py
mt5_api/routers/: orders.py  positions.py  prices.py  symbols.py
mt5_api/routes/: orders.py
mt5_api/settings/: __init__.py
tests/: test_main.py  test_models.py  test_mt5_api.py  test_routers.py
