[tool.poetry]
name = "mt5-api"
version = "0.1.0"
description = "API wrapper for Metatrader 5"
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
