[tool.poetry]
name = "mt5-api"
version = "0.1.0"
description = "API wrapper for Metatrader 5"
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
MetaTrader5 = "^5.0.37"
loguru = "^0.6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.4"
autopep8 = "^1.6.0"
pyright = "^1.1.261"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
