[tool.poetry]
name = "mt5-api"
version = "0.1.0"
description = "API wrapper for Metatrader 5"
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
MetaTrader5 = "^5.0.37"
loguru = "^0.7.2"
pandas = "^1.4.3"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
pydantic-extra-types = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.4"
autopep8 = "^1.6.0"
pyright = "^1.1.261"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-unused-arguments = "^0.0.10"
pytest-mock = "^3.8.2"
coverage = {extras = ["toml"], version = "^6.4.2"}
requests = "^2.28.1"
autoflake = "^1.4"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 100

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88